feat: resultado final e resultado consolidado